# research-reasoning-engine

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  pyproject.toml  requirements.txt
agents/: base_agent.py  falsifier.py  generator.py  refiner.py
data/index/: faiss.index  metadata.json
data/processed/: index.faiss  metadata.json
evaluation/: hypothesis_scorer.py
research-reasoning-engine/: package-lock.json  package.json
research-reasoning-engine/app/: globals.css  layout.tsx  page.tsx  providers.tsx
research-reasoning-engine/app/metrics/: page.tsx
research-reasoning-engine/app/results/: page.tsx
research-reasoning-engine/app/sessions/: page.tsx
research-reasoning-engine/app/workspace/: page.tsx
research-reasoning-engine/components/: EvidenceTab.tsx  GraphTab.tsx  HypothesisTab.tsx  LoadingTimeline.tsx  MetricsTab.tsx  OverviewTab.tsx  Sidebar.tsx
research-reasoning-engine/components/chains/: supporting-chains.tsx
research-reasoning-engine/components/conflicts/: conflict-analysis.tsx
research-reasoning-engine/components/evidence/: evidence-explorer.tsx
research-reasoning-engine/components/graph/: reasoning-graph.tsx
research-reasoning-engine/hooks/: use-research.ts
research-reasoning-engine/lib/: api.ts  mock-data.ts  store.ts
research-reasoning-engine/services/: api.ts
research-reasoning-engine/store/: research-store.ts
research-reasoning-engine/types/: analysis.ts  research.ts
simulation/: base_simulator.py  bio_simulator.py
tests/: test_config.py  test_index.py  test_llm_wrapper.py  test_rag.py
(+42 files in other folders)
